app/source/css/components/WeeklySchedule.styl
/** WeeklySchedule component styles **/

@import '../utils/isolated.styl';

.WeeklySchedule {

    // Some values from the Bootstrap-Switch plugin styles
    $switchBtn-partsWidth = 53px;
    $switchBtn-height = 32px;
    // 2 visible handles/parts and 2px of lateral border:
    $switchBtn-width = ($switchBtn-partsWidth * 2) + 2px;
    $gapWithSwitch = 14px;
    $addRemBtn-width = 40px;
    
    // Center the container, make it uses just the needed width
    text-align: left;
    > form.container {
        margin: auto;
        // Auto width
        display: inline-block;
        // Restore align for content
        text-align: left;
    }

    .WeeklySchedule-weekDay {
        
        margin-bottom: 14px;
    
        /* The element with the label text on 
            the right of the switch button
        */
        label > div + span {
            pointer-events: none;
            // IMPORTANT: A gap carefully aligned in vertical
            // with the dropdowns .WeeklySchedule-weekDay-timeSelectors
            padding-left: $gapWithSwitch;
            // To be vertically aligned with the Switch button,
            // using the Switch height:
            line-height: $switchBtn-height;
        }
        
        // IMPORTANT: Force SWITCH width to avoid it automatic size (based on text size,
        // font-family varies from platform to platform)
        // Using the wider handle size tested --on browser.
        .bootstrap-switch-container {
            > span {
                width: $switchBtn-partsWidth !important;
            }
        }

        .WeeklySchedule-weekDay-timeSelectors {
            // IMPORTANT: the remove/add buttons are aligned in the right with the top switch button
            padding-left: $switchBtn-width - $addRemBtn-width; //68px;

            // IMPORTANT: Next left margins and select paddings are carefully choosen so
            // it fits one row in a screen size of 320px (original iPhone).
            .WeeklySchedule-weekDay-timeRange {
                .btn + select {
                    margin-left: 6px;
                }
                
                margin-bottom: 2px;
                
                select {
                    width: auto;
                    display: inline-block;
                    // Fix the total height and the strange margin added
                    vertical-align: middle;
                    // 5px horizontal is OK in iPhone: enought padding without requiring 2 lines,
                    // while in Chrome and Firefox, for some reason, they add an additional internal
                    // gap between padding and the beggining of the text. Thats make it a bit wider
                    // in Chrome/Android, but not enought to have problems from 320px screen width.
                    padding: 6px 5px;
                }
            }

            .btn {
                border-radius: border-radius-base;
            }
        }
    }

    .WeeklySchedule-allTime {
        
        isolated();
    
        label {
            display: block;
            text-align: center;
        
            > span {
                line-height: $switchBtn-height;
                pointer-events: none;
            }
        
            .bootstrap-switch {
                margin-left: 1em;
            }
        }
    }
}

